2006-03-28  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_error_from_gst_error):
	  Fix printf format in debug message (string != integer).

2006-03-27  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (show_controls): make the menubar unsensitive to avoid
	the menu shortcuts being available in fullscreen (Closes: #301693)

2006-03-27  Bastien Nocera  <hadess@hadess.net>

	* data/popup.glade: Make the icons for next/previous the same in the
	popup as in the main interface (Closes: #335648)

2006-03-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_set_connection_speed): Only open with the
	subtitled mrl if there is one, patch by Andreas Henriksson
	<andreas@fjortis.info> (Closes: #336127), avoid error when setting
	the connection speed to the maximum

2006-03-22  Bastien Nocera  <hadess@hadess.net>

	* MAINTAINERS: added (Closes: #335021)

2006-03-21  Dennis Cranston  <dennis_cranston@yahoo.com>

	* src/bacon-volume.c: (bacon_volume_scale_value_changed): Volume
	should not display stock_volume-0 for volume > 0.

2006-03-21  Bastien Nocera  <hadess@hadess.net>

	* data/handlers.sh: use "needs_terminal" GConf key, and not
	"need-terminal" as previously, spotted by John Thacker
	<thacker@math.cornell.edu> (Closes: #335138)

2006-03-18  Vladimer Sichinava  <vlsichinava@gmail.com>

        * configure.in: Added "ka" (Georgian) to ALL_LINGUAS

2006-03-17  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (parse_asx_entry): don't forcibly
	change mms:// urls to mmsh://, the server might not handle it
	(Closes: #333375)

2006-03-16  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/backend/Makefile.am: reorder the link libraries to be able to
	build on some systems, patch by Mikhail Zabaluev <mhz@altlinux.org>
	(Closes: #334731)

2006-03-15  Bastien Nocera  <hadess@hadess.net>
