@@ -1,3 +1,10 @@
+2006-03-30  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plparse/totem-pl-parser.c:
+	(totem_pl_parser_add_quicktime_metalink),
+	(totem_pl_parser_parse_internal): don't look for ignore if we already
+	parsed it
+
 2006-03-28  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
